RESOLVED FIXED153225
CharacterData::setData doesn't need ExceptionCode as an out argument
https://bugs.webkit.org/show_bug.cgi?id=153225
Summary CharacterData::setData doesn't need ExceptionCode as an out argument
Ryosuke Niwa
Reported 2016-01-19 00:47:26 PST
CharacterData::setData never throws so there's no need for it to take ExceptionCode.
Attachments
Cleanup (9.22 KB, patch)
2016-01-19 00:50 PST, Ryosuke Niwa
koivisto: review+
Ryosuke Niwa
Comment 1 2016-01-19 00:50:46 PST
Ryosuke Niwa
Comment 2 2016-01-19 00:58:58 PST
Note You need to log in before you can comment on or make changes to this bug.