Source/WebCore/html/HTMLOptionElement.cpp
@@ -119,7 +119,7 @@ void HTMLOptionElement::setText(const String &text, ExceptionCode& ec)
     // Handle the common special case where there's exactly 1 child node, and it's a text node.
     Node* child = firstChild();
     if (is<Text>(child) && !child->nextSibling())
-        downcast<Text>(*child).setData(text, ec);
+        downcast<Text>(*child).setData(text);
     else {
         removeChildren();
         appendChild(Text::create(document(), text), ec);
