Source/WebCore/html/HTMLScriptElement.cpp
@@ -83,7 +83,7 @@ void HTMLScriptElement::setText(const String &value)
     Ref<HTMLScriptElement> protectFromMutationEvents(*this);
 
     if (hasOneChild() && is<Text>(*firstChild())) {
-        downcast<Text>(*firstChild()).setData(value, IGNORE_EXCEPTION);
+        downcast<Text>(*firstChild()).setData(value);
         return;
     }
 
